--- a/src/resources/scss/box.scss
+++ b/src/resources/scss/box.scss
@@ -5,6 +5,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 30px;
+    margin: 40px 0 40px 0;
 }
 .box-items {
     // width: 350px;
