--- a/src/resources/views/user/home.hbs
+++ b/src/resources/views/user/home.hbs
@@ -26,7 +26,10 @@
     <div class="about-us-info">
         <h1>Về EAVES</h1>
         <h3>EAVES hiểu bạn</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla culpa repudiandae fugiat at vero tempore tenetur reprehenderit. Eligendi tempora fugit, maiores, libero eaque cupiditate explicabo exercitationem unde nisi reprehenderit ea.</p>
+        <p>Hành trình luôn bắt đầu từ việc chọn 
+          lựa nguyên liệu kỹ càng từ các vùng đất trù phú,
+          cho đến việc bảo quản, pha chế từ bàn tay nghệ nhân. 
+          Qua những nỗ lực không ngừng, EAVES luôn hướng đến...</p>
         <button>Xem thêm</button>
     </div>
     <div class="about-us-pic">
@@ -48,30 +51,10 @@
     <div class="box-items">
         <h1>Trà Trái Cây</h1>
         <img class="box-item-img" src="/img/tra-img.png">
-    </div>-
+    </div>
 </div>
 
 {{!-- store info --}}
 
-<div class="about-tea-container">
-  <div class="col-1">
-    <h1>Do you really enjoy our tea? Let we know.</h1>
-    <div class="about-tea-img">
-      <img src="" alt="">
-    </div>
-  </div>
-  <div class="col-2">
-    <div class="row-1">
-      <ul>
-        <li>Signature Drink</li>
-        <li>Brewed Tea Series</li>
-        <li>Milk Tea Series</li>
-        <li>Smoothie Series</li>
-        <li>Creative Series</li>
-      </ul>
-    </div>
-    <h2 class="row-2">Creative series</h2>
-    <p class="row-3">A combination of tea and fresh fruit flavor.</p>
-    <button class="row-4">MENU</button>
-  </div>
-</div>
+
+
