--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -35,7 +35,10 @@ header {
 .header {
   width: 100vw;
   display: flex;
-  background-color: #df6788; }
+  background-color: #df6788;
+  position: fixed;
+  top: 0;
+  z-index: 100; }
 
 .logo {
   margin-left: 30px; }
@@ -338,8 +341,77 @@ body {
   transition: opacity .15s ease;
   text-decoration: none; }
 
-.footer {
-  background-color: var(--bg-color);
-  color: #3e195c;
-  padding: 20px;
-  text-align: center; }
+.footer-wrapper {
+  background-color: #df6788ab;
+  padding: 34px 0; }
+
+.footer-container {
+  height: 450px;
+  margin: 0 30px;
+  padding: 0 15px; }
+
+.footer-container .row-1 {
+  display: flex; }
+
+.footer-container .row-1 .col-1, .footer-container .row-1 .col-3 {
+  flex: 1; }
+
+.footer-container .row-1 .col-2, .footer-container .row-1 .col-4 {
+  flex: 1; }
+
+.footer-container .row-1 .col-1 p, .footer-container .row-1 .col-2 p, .footer-container .row-1 .col-3 p {
+  font-weight: bold;
+  font-size: 18px; }
+
+.footer-container .row-1 ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0; }
+
+.footer-container .row-1 ul li {
+  margin: 0 0 8px; }
+
+.footer-container .row-1 ul li a {
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
+  transition: all 0.3s ease; }
+
+.footer-container .row-1 ul li a:hover {
+  color: white;
+  padding-left: 10px; }
+
+.footer-container .row-1 .col-3 p {
+  margin: 0 0 24px; }
+
+.footer-container .row-1 .col-4 .row-1 {
+  height: 130px; }
+
+.footer-container .row-1 .col-4 .row-1 iframe {
+  width: 100%;
+  border-radius: 6px; }
+
+.footer-container .row-1 .col-4 .row-2 {
+  margin: 18px 0 10px; }
+
+.footer-container .row-1 .col-4 .row-2 a {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 38px;
+  border-radius: 50%;
+  transition: all 0.5s ease; }
+
+.footer-container .row-1 .col-4 .row-2 img {
+  width: 60%; }
+
+.footer-container .row-2 hr {
+  border: 2px solid white; }
+
+.footer-container .row-3 ul {
+  list-style-type: none;
+  padding: 0;
+  color: white; }
