--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -26,25 +26,33 @@
   text-align: center; }
 
 .carousel {
-  margin: 45px 0 0; }
+  margin: 100px 0 0; }
 
 .about-us-container {
   display: flex;
+  align-items: center;
   margin: 40px 0 40px 0; }
 
 .about-us-info {
   flex: 1;
-  margin: 40px 0 30px 20px; }
+  padding: 0 28px 0 0; }
 
 .about-us-info h1, .about-us-info h3, .about-us-info p {
   margin: 10px 0 20px;
   color: #3e195c; }
 
 .about-us-info h1 {
-  font-size: 40px; }
+  font-size: 40px;
+  color: #BC5A94; }
+
+.about-us-info h3 {
+  font-size: 24px;
+  font-weight: bold; }
 
 .about-us-info p {
-  font-size: 20px; }
+  font-size: 22px;
+  font-weight: normal;
+  line-height: 40px; }
 
 .about-us-info button {
   font-size: 18px;
@@ -60,8 +68,10 @@
   background-color: #df6788; }
 
 .about-us-pic {
-  flex: 1; }
+  flex: 1;
+  display: flex; }
 
 .about-us-pic img {
   width: 100%;
+  height: 100%;
   border-radius: 5px; }
