--- a/src/resources/scss/home.scss
+++ b/src/resources/scss/home.scss
@@ -1,17 +1,19 @@
 @import 'variables';
 
 .carousel {
-    margin:45px 0 0;
+    margin: 100px 0 0;
 }
 
 .about-us-container {
     display: flex;
+    align-items: center;
     margin: 40px 0 40px 0;
 }
 
 .about-us-info {
     flex: 1;
-    margin: 40px 0 30px 20px;    
+    // background-color: lightblue;
+    padding: 0 28px 0 0;
 }
 
 .about-us-info h1, .about-us-info h3, .about-us-info p{
@@ -21,10 +23,19 @@
 
 .about-us-info h1 {
     font-size: 40px;
+    color: #BC5A94;
+    
+}
+
+.about-us-info h3 {
+    font-size: 24px;
+    font-weight: bold;
 }
 
 .about-us-info p {
-    font-size: 20px;
+    font-size: 22px;
+    font-weight: normal;
+    line-height: 40px;
 }
 
 .about-us-info button {
@@ -44,9 +55,11 @@
 
 .about-us-pic {
     flex: 1;
+    display: flex;
 }
 
 .about-us-pic img {
     width: 100%;
+    height: 100%;
     border-radius: 5px;
 }
