--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -1,13 +1,62 @@
-<div class="footer container-fluid footer__container">
-    <div class="row ">
-        <div class="col-md-4 col-sm-6">
-           
+
+<div class="footer-wrapper">
+    <div class="footer-container">
+        <div class="row-1">
+            <div class="col-1">
+                <p>Giới thiệu</p>
+                <ul>
+                    <li><a href="#">Về Chúng Tôi</a></li>
+                    <li><a href="#">Sản phẩm</a></li>
+                    <li><a href="#">Khuyến mãi</a></li>
+                    <li><a href="#">Chuyện cà phê</a></li>
+                    <li><a href="#">Cửa Hàng</a></li>
+                    <li><a href="#">Tuyển dụng</a></li>
+                </ul>
+            </div>
+            <div class="col-2">
+                <p>Điều khoản</p>
+                <ul>
+                    <li><a href="#">Điều khoản sử dụng</a></li>
+                    <li><a href="#">Chính sách bảo mật thông tin</a></li>
+                    <li><a href="#">Hướng dẫn xuất hóa đơn GTGT</a></li>
+                </ul>
+            </div>
+            <div class="col-3">
+                <div class="row-1">
+                    <p>
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                        Đặt hàng: 1234 5678
+                    </p>
+                </div>
+                <div class="row-2">
+                    <p>
+                        <i class="fa fa-location-arrow" aria-hidden="true"></i>
+                        Đặt hàng: 1234 5678
+                    </p>
+                </div>
+                {{!-- khong can trụ sở --}}
+            </div>
+            <div class="col-4">
+                <div class="row-1">
+                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fkatinat.vn&tabs=timeline&width=340&height=90&small_header=false&adapt_container_width=false&hide_cover=false&show_facepile=false&appId" width="340" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                </div>
+                <div class="row-2">
+                    <a href="#"><img src="/img/fb-icon.webp" alt=""></a>
+                    <a href="#"><img src="/img/ins-icon.png" alt=""></a>
+                </div>
+            </div>
         </div>
-        <div class="col-md-4 col-sm-6">
-            
+        <div class="row-2">
+            <hr>
         </div>
-        <div class="col-md-4 col-sm-6">
-           
+        <div class="row-3">
+            <ul>
+                <li>Công ty cổ phần thương mại dịch vụ Trà Cà Phê VN</li>
+                <li>Người đại diện: BÙI THANH HẬU</li>
+                <li>Địa chỉ: 180 Đ. Cao Lỗ, Phường 4, Quận 8, Hồ Chí Minh</li>
+                <li>Điện thoại: 1234 5678</li>
+                <li>Email: abc@gmail.com</li>
+            </ul>
         </div>
     </div>
 </div>
